:sparkles: feat: new token comma